<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~     Lyrebird, a free open-source cross-platform twitter client.
  ~     Copyright (C) 2017-2018, Tristan Deloche
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.0.4.RELEASE</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>moe.lyrebird</groupId>
    <artifactId>lyrebird-parent</artifactId>
    <version>1.1.3</version>

    <packaging>pom</packaging>

    <name>lyrebird-parent</name>
    <description>Maven parent for Lyrebird</description>

    <scm>
        <connection>scm:git:git://github.com/Tristan971/Lyrebird.git</connection>
        <developerConnection>scm:git:ssh://github.com:Tristan971/Lyrebird.git</developerConnection>
        <url>http://github.com/Tristan971/Lyrebird/tree/master</url>
    </scm>

    <issueManagement>
        <system>Github Issues</system>
        <url>https://github.com/Tristan971/Lyrebird/issues</url>
    </issueManagement>

    <developers>
        <developer>
            <name>Tristan Deloche</name>
            <email>tristandeloche@gmail.com</email>
            <url>https://tristan.moe</url>
        </developer>
    </developers>

    <organization>
        <name>Lyrebird</name>
        <url>https://lyrebird.moe</url>
    </organization>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>10</java.version>
    </properties>

    <modules>
        <module>lyrebird</module>
        <module>lyrebird-api</module>
        <module>lyrebird-api-server</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <!-- Spring maven plugin -->
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <addResources>false</addResources>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                        <release>10</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.0</version>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.1</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>test</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>dev</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-resources-plugin</artifactId>
                            <configuration>
                                <overwrite>true</overwrite>
                                <resources>
                                    <resource>
                                        <directory>${project.basedir}/src/main/java</directory>
                                        <includes>
                                            <include>**/*.fxml</include>
                                        </includes>
                                    </resource>
                                    <resource>
                                        <directory>${project.basedir}/src/main/resources</directory>
                                        <filtering>true</filtering>
                                        <includes>
                                            <include>**/*</include>
                                        </includes>
                                    </resource>
                                    <resource>
                                        <directory>${project.basedir}/src/main/resources-dev</directory>
                                        <filtering>true</filtering>
                                        <includes>
                                            <include>**/*</include>
                                        </includes>
                                    </resource>
                                </resources>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>

</project>
